# vectorization-tf-idf-cpp

./: .gitignore  LICENSE  README.md  main.cpp
src/embending/: CMakeLists.txt  data_analysis_allf.hpp  data_analysis_allfd.cpp  export.h
src/embending/data_analysis/: tokenizer.cpp  tokenizer.hpp
src/embending/stemming/: stem_str.hpp
src/embending/vect/: vectorization.cpp  vectorization.hpp
src/py/: install_lib.py
